# RobotAppCocoa3

./: .gitignore  IPHONE 解析度.rtf  cocos2d-3.9取代列表.rtf
trunk/: Git下載說明.txt  ROBOT_APP.sln  ROBOT_APP.vcxproj  ROBOT_APP.vcxproj.filters  player3.0.2編譯說明.xlsx
trunk/AlgorithmUtil/: AlgorithmConfig.cc  AlgorithmConfig.hpp  AlgorithmUtil.cpp  AlgorithmUtil.hpp  CImg.h  CMakeLists.txt  EventNotifier.hpp  HazardNotifier.hpp  InfoTable.hpp  WallFollow.cpp  WallFollow.hpp  btime.h  commands.cc  commands.hpp  config.hpp  mapper.cc  mapper.hpp  normal.cpp  normal.hpp
trunk/IMAGE_PACK/: 圖檔SIZE.xlsx
trunk/IMAGE_PACK/drawable-mdpi/: schedule_btn_close_selector.xml
trunk/IMAGE_PACK/unuse/drawable-mdpi/: schedule_btn_close_selector.xml
trunk/Main/: Main.rc  Main.vcxproj  Main.vcxproj.filters  resource.h
trunk/PCAPP.xcworkspace/: contents.xcworkspacedata
trunk/PCAPP.xcworkspace/xcuserdata/adifly.xcuserdatad/: UserInterfaceState.xcuserstate
trunk/ROBOT_APP/: ROBOT_APP.rc  main.cpp
trunk/ROBOT_APP/Classes/: AppDelegate.cpp  Coco2dDialog.cpp  Coco2dDialog.h  HelloWorldScene.cpp  HelloWorldScene.h  ImageList.h  Ini.cpp  MAP_Function.cpp  MAP_Function.h  UI_CleanJob.cpp  UI_CleanJob.h  UI_MAP.cpp  UI_MAP.h  UI_Reservation.cpp  UI_Reservation.h  UI_RobotMain.cpp  UI_RobotMain.h  UI_RobotRemote.cpp  UI_RobotRemote.h  UI_RobotScanning.cpp  UI_RobotScanning.h  UI_RobotSetup.cpp  UI_RobotSetup.h  UI_SAMPLE.cpp  UI_SAMPLE.h  UI_commonFun.cpp  UI_commonFun.h  WifiScan.cpp  WifiScan.h  dbg.h  player.cpp  player.h
trunk/Resources/: RobotSetting.ini  WIN.ini
trunk/Resources/Image/: RobotAll_1920_1080_0.tps  RobotAll_1920_1080_1.plist  RobotAll_1920_1080_1.tps  RobotAll_1920_1080_4.tps  RobotAll_1920_1080_5.plist  RobotAll_356_634_0.tps  RobotAll_356_634_1.tps  RobotAll_724_1286_0.tps  RobotAll_724_1286_1.tps  RobotAll_724_1286_2.plist  RobotAll_960_540_0.tps  RobotAll_960_540_1.plist  RobotAll_960_540_1.tps
trunk/Resources/unuse/: RobotAll_1920_1080_0.plist  RobotAll_1920_1080_0.tps  RobotAll_1920_1080_1.plist  RobotAll_1920_1080_1.tps  RobotAll_1920_1080_2.plist  RobotAll_1920_1080_2.tps  RobotAll_1920_1080_3.plist  RobotAll_1920_1080_3.tps  RobotAll_1920_1080_4.plist  RobotAll_1920_1080_4.tps  RobotAll_1920_1080_5.plist  RobotAll_1920_1080_5.tps  RobotAll_356_634_0.plist  RobotAll_356_634_0.tps  RobotAll_356_634_1.plist  RobotAll_356_634_1.tps  RobotAll_724_1286_0.plist  RobotAll_724_1286_0.tps  RobotAll_724_1286_1.plist  RobotAll_724_1286_1.tps  RobotAll_724_1286_2.plist  RobotAll_724_1286_2.tps  RobotAll_960_540_0.plist  RobotAll_960_540_0.tps  RobotAll_960_540_1.plist  RobotAll_960_540_1.tps
trunk/cocos2d-x-3.9/cocos/platform/: CCGLView.cpp  CCGLView.h
trunk/player-git-svn/: CMakeLists.txt  PlayerCPackOptions.cmake.in  playerconfig.h.in
trunk/player-git-svn/client_libs/libplayerc++/: CMakeLists.txt  (+15 more)
trunk/player-git-svn/cmake/: UsePlayerC++.cmake.in  UsePlayerC.cmake.in  UsePlayerPlugin.cmake.in
trunk/player-git-svn/libplayercommon/: error.h
trunk/player-git-svn/libplayercore/: message.cc  message.h  wallclocktime.cc
trunk/player-git-svn/libplayerinterface/: player.h
trunk/player-git-svn/libplayertcp/: playertcp.cc  playerudp.cc  tcpremote_driver.cc  tcpremote_driver.h
trunk/player-git-svn/replace/: CMakeLists.txt  nanosleep.c  replace.h  usleep.c  xdr_array.c
trunk/player-git-svn/utils/: CMakeLists.txt
trunk/player-git-svn/utils/gettimereplace/: CMakeLists.txt  gettimereplace.c  gettimereplace.h
trunk/player-git-svn/utils/playernav2/: CMakeLists.txt  gui.c  parse.c  player.c  playernav.c  playernav.h  queue.c
trunk/player-git-svn/utils/playernav3/: CMakeLists.txt  gui.c  parse.c  player.c  playernav.c  playernav.h  queue.c
(+92 files in other folders)
