OPTION (BUILD_UTILS_GETTIMEREPLACE "Build the get time replace utility." ON)
IF (BUILD_UTILS_GETTIMEREPLACE)
	IF ("$ENV{GETTIMEOFDAY_REPLACE_BY_CLOCKGETTIME}" STREQUAL "true")
		MESSAGE (STATUS "GETTIMEOFDAY_REPLACE_BY_CLOCKGETTIME : $ENV{GETTIMEOFDAY_REPLACE_BY_CLOCKGETTIME}")
		OPTION (CLOCKGETTIME_REPLACE_GETTIMEOFDAY "clock_gettime replace gettimeofday under Linux." ON)
	ENDIF ("$ENV{GETTIMEOFDAY_REPLACE_BY_CLOCKGETTIME}" STREQUAL "true")
	IF ("$ENV{GETTIMEOFDAY_REPLACE_BY_CLOCKGETTIME}" STREQUAL "false")
		MESSAGE (STATUS "GETTIMEOFDAY_REPLACE_BY_CLOCKGETTIME : $ENV{GETTIMEOFDAY_REPLACE_BY_CLOCKGETTIME}")
		OPTION (CLOCKGETTIME_REPLACE_GETTIMEOFDAY "clock_gettime replace gettimeofday under Linux." OFF)
	ENDIF ("$ENV{GETTIMEOFDAY_REPLACE_BY_CLOCKGETTIME}" STREQUAL "false")
ENDIF (BUILD_UTILS_GETTIMEREPLACE)
